History of feedfeeder
=====================

1.0 rc 3 (unreleased)
---------------------

- Extensions/AppInstall.py: first try installing our own profile in
  the Plone 3 way and when that fails try the Plone 2.5 way.
  [maurits]

- Removed own feedparser.py.  Instead added an install_requires
  dependency on FeedParser in setup.py.  [maurits]

- Moved fix for feeds starting with 'feed:' instead of 'http:' from
  feedparser.py to utilities.py, so we use an unchanged feedparser.py
  again.  [maurits]


1.0 rc 2 (2008-07-23)
---------------------

- Re-release of rc1: rc1 was missing all .txt files, making install impossible
  as setup.py reads version.txt. [reinout]


1.0 rc 1 (2008-07-15)
---------------------

- Accept entries without a title, which is allowed in rss.
  See http://cyber.law.harvard.edu/rss/rss.html#hrelementsOfLtitemgt
  [maurits]


1.0 beta 4 (2008-05-20)
-----------------------

- Eggification: you can now install it as the Products.feedfeeder
  egg.  [maurits]


1.0 beta 3 (2008-05-13)
-----------------------

- In the tests, use plone_workflow explicitly, so it is easier to test
  on both Plone 2.5 and 3.0.  [maurits]

- Make update_feed_items available in the object_buttons for Plone 3,
  using new small @@is_feedcontainer as condition.  [maurits]

- Avoid deprecation warnings for events and interfaces.  [maurits]

- Remove semicolon in page template that broke in Plone 3.  [maurits]

- Fix imports so they work in Plone 3 as well, without deprecation
  warnings.  [derstappenit]


1.0 beta 2 (2008-01-02)
-----------------------

- History begins.