@@ -1,2 +1,1 @@
-- Make updated date available for Collections in
-  profiles/default/portal_atct.xml
+- No plans yet.
